--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "framer-motion": "^12.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-parallax-tilt": "^1.7.296",
     "react-router-dom": "^7.6.1",
-    "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.5.3",
     "tailwindcss": "^4.1.8"
   },
